; ModuleID = '/home/carl/AnghaBench/linux/tools/testing/selftests/bpf/extr_xdping.c_cleanup.c'
source_filename = "/home/carl/AnghaBench/linux/tools/testing/selftests/bpf/extr_xdping.c_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ifindex = common dso_local global i32 0, align 4
@xdp_flags = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cleanup(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @ifindex, align 4
  %4 = load i32, i32* @xdp_flags, align 4
  %5 = call i32 @bpf_set_link_xdp_fd(i32 %3, i32 -1, i32 %4)
  %6 = load i32, i32* %2, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = call i32 @exit(i32 1) #3
  unreachable

10:                                               ; preds = %1
  ret void
}

declare dso_local i32 @bpf_set_link_xdp_fd(i32, i32, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
